style(layouts): fixed some styling issues on mobile, added wider side-menu

--- a/apps/client/src/styles.less
+++ b/apps/client/src/styles.less
@@ -226,6 +226,10 @@ nz-alert.dark {
 .ant-layout-sider-zero-width-trigger {
   opacity: .8;
 }
+.sider .ant-layout-sider-zero-width-trigger {
+  background: var(--zero-width-sider-trigger-color) !important;
+  top: 30px;
+}
 
 .ant-select-dropdown-menu-item:hover, .ant-select-dropdown-menu-item-active, .ant-dropdown-menu-item:hover,
 .ant-dropdown-menu-submenu-title:hover {
