--- a/apps/client/src/theme.less
+++ b/apps/client/src/theme.less
@@ -336,6 +336,7 @@ a, .ant-table-filter-dropdown-link {
 
 .ant-layout-sider {
   background: var(--topbar-color);
+
 }
 
 .ant-menu-dark, .ant-menu-dark .ant-menu-sub {
@@ -349,7 +350,7 @@ a, .ant-table-filter-dropdown-link {
 .ant-layout-header {
   background: var(--topbar-color);
 
-  padding: 0 12px;
+  padding: 0 0 0 12px;
 }
 
 .ant-menu-dark.ant-menu-horizontal > .ant-menu-item, .ant-menu-dark.ant-menu-horizontal > .ant-menu-submenu {
